2012-02-14	Stephan Linz <linz@li-pro.net>

	* common: initial version Xilinx-ML605-AXI-lite-13.2
