@@ -22,7 +22,7 @@
 #
 # CAUTION:  This file is automatically generated by libgen.
 # Version:  Xilinx EDK 13.2 EDK_O.61xd
-# Today is: Tuesday, the 14 of February, 2012; 22:15:29
+# Today is: Saturday, the 18 of February, 2012; 13:12:49
 #
 # Description: Linux 2.6 Configurations
 #
@@ -66,7 +66,7 @@ config XILINX_MICROBLAZE0_USE_FPU
 
 config XILINX_MICROBLAZE0_HW_VER
 	string "Core version number"
-	default "8.10.a"
+	default "8.20.a"
 
 
 # System memory is axi_v6_ddrx_0
