@@ -22,7 +22,7 @@
 #
 # CAUTION:  This file is automatically generated by libgen.
 # Version:  Xilinx EDK 13.2 EDK_O.61xd
-# Today is: Tuesday, the 14 of February, 2012; 22:15:29
+# Today is: Saturday, the 18 of February, 2012; 13:12:49
 #
 # Description: Linux 2.4 Configurations
 #
@@ -43,8 +43,10 @@ define_int CONFIG_XILINX_MICROBLAZE0_DATA_SIZE 32
 define_int CONFIG_XILINX_MICROBLAZE0_DYNAMIC_BUS_SIZING 1
 define_string CONFIG_XILINX_MICROBLAZE0_FAMILY virtex6
 define_string CONFIG_XILINX_MICROBLAZE0_INSTANCE microblaze_0
+define_int CONFIG_XILINX_MICROBLAZE0_AVOID_PRIMITIVES 0
 define_int CONFIG_XILINX_MICROBLAZE0_FAULT_TOLERANT 0
 define_int CONFIG_XILINX_MICROBLAZE0_ECC_USE_CE_EXCEPTION 0
+define_int CONFIG_XILINX_MICROBLAZE0_LOCKSTEP_SLAVE 0
 define_int CONFIG_XILINX_MICROBLAZE0_ENDIANNESS 1
 define_int CONFIG_XILINX_MICROBLAZE0_AREA_OPTIMIZED 0
 define_int CONFIG_XILINX_MICROBLAZE0_OPTIMIZATION 0
@@ -253,7 +255,7 @@ define_int CONFIG_XILINX_MICROBLAZE0_USE_BRANCH_TARGET_CACHE 0
 define_int CONFIG_XILINX_MICROBLAZE0_BRANCH_TARGET_CACHE_SIZE 0
 define_int CONFIG_XILINX_MICROBLAZE0_INTERCONNECT_M_AXI_DC_AW_REGISTER 0
 define_int CONFIG_XILINX_MICROBLAZE0_INTERCONNECT_M_AXI_DC_W_REGISTER 0
-define_string CONFIG_XILINX_MICROBLAZE0_HW_VER 8.10.a
+define_string CONFIG_XILINX_MICROBLAZE0_HW_VER 8.20.a
 define_string CONFIG_XILINX_MICROBLAZE0_INSTANCE microblaze_0
 
 # Interrupt controller is axi_intc_0
@@ -263,7 +265,7 @@ define_hex CONFIG_XILINX_INTC_0_HIGHADDR 0x8affffff
 define_int CONFIG_XILINX_INTC_0_S_AXI_ADDR_WIDTH 32
 define_int CONFIG_XILINX_INTC_0_S_AXI_DATA_WIDTH 32
 define_int CONFIG_XILINX_INTC_0_NUM_INTR_INPUTS 6
-define_string CONFIG_XILINX_INTC_0_KIND_OF_INTR 0b11111111111111111111111111011001
+define_string CONFIG_XILINX_INTC_0_KIND_OF_INTR 0b11111111111111111111111111011000
 define_string CONFIG_XILINX_INTC_0_KIND_OF_EDGE 0b11111111111111111111111111111111
 define_string CONFIG_XILINX_INTC_0_KIND_OF_LVL 0b11111111111111111111111111111111
 define_int CONFIG_XILINX_INTC_0_HAS_IPR 1
@@ -295,7 +297,7 @@ define_hex CONFIG_XILINX_TIMER_0_BASEADDR 0x8aef0000
 define_hex CONFIG_XILINX_TIMER_0_HIGHADDR 0x8aefffff
 define_int CONFIG_XILINX_TIMER_0_S_AXI_ADDR_WIDTH 32
 define_int CONFIG_XILINX_TIMER_0_S_AXI_DATA_WIDTH 32
-define_string CONFIG_XILINX_TIMER_0_HW_VER 1.01.a
+define_string CONFIG_XILINX_TIMER_0_HW_VER 1.02.a
 define_string CONFIG_XILINX_TIMER_0_INSTANCE axi_timer_0
 define_int CONFIG_XILINX_TIMER_0_Interrupt 0
 
