@@ -22,7 +22,7 @@
 #
 # CAUTION:  This file is automatically generated by libgen.
 # Version:  Xilinx EDK 13.2 EDK_O.61xd
-# Today is: Tuesday, the 14 of February, 2012; 22:15:28
+# Today is: Saturday, the 18 of February, 2012; 13:12:49
 #
 # Description: U-Boot Configurations
 #
@@ -34,7 +34,7 @@
 PLATFORM_CPPFLAGS += -mxl-pattern-compare
 PLATFORM_CPPFLAGS += -mxl-barrel-shift
 PLATFORM_CPPFLAGS += -mno-xl-soft-mul
-PLATFORM_CPPFLAGS += -mcpu=v8.10.a
+PLATFORM_CPPFLAGS += -mcpu=v8.20.a
 
 # Automatic U-Boot position at 0x2fe00000
 CONFIG_SYS_TEXT_BASE = 0x2fe00000
