@@ -29,7 +29,7 @@
  *
  * CAUTION:  This file is automatically generated by libgen.
  * Version:  Xilinx EDK 13.2 EDK_O.61xd
- * Today is: Tuesday, the 14 of February, 2012; 22:15:29
+ * Today is: Saturday, the 18 of February, 2012; 13:12:50
  *
  * XPS project directory: Xilinx-ML605-AXI-lite-13.2
  */
@@ -59,7 +59,7 @@
 		#size-cells = <0>;
 		microblaze_0: cpu@0 {
 			clock-frequency = <100000000>;
-			compatible = "xlnx,microblaze-8.10.a";
+			compatible = "xlnx,microblaze-8.20.a";
 			d-cache-baseaddr = <0x20000000>;
 			d-cache-highaddr = <0x2fffffff>;
 			d-cache-line-size = <0x10>;
@@ -69,13 +69,14 @@
 			i-cache-highaddr = <0x2fffffff>;
 			i-cache-line-size = <0x10>;
 			i-cache-size = <0x800>;
-			model = "microblaze,8.10.a";
+			model = "microblaze,8.20.a";
 			reg = <0>;
 			timebase-frequency = <100000000>;
 			xlnx,addr-tag-bits = <0x11>;
 			xlnx,allow-dcache-wr = <0x1>;
 			xlnx,allow-icache-wr = <0x1>;
 			xlnx,area-optimized = <0x0>;
+			xlnx,avoid-primitives = <0x0>;
 			xlnx,branch-target-cache-size = <0x0>;
 			xlnx,cache-byte-size = <0x800>;
 			xlnx,d-axi = <0x1>;
@@ -120,6 +121,7 @@
 			xlnx,instance = "microblaze_0";
 			xlnx,interconnect = <0x2>;
 			xlnx,interrupt-is-edge = <0x0>;
+			xlnx,lockstep-slave = <0x0>;
 			xlnx,mmu-dtlb-size = <0x4>;
 			xlnx,mmu-itlb-size = <0x2>;
 			xlnx,mmu-privileged-instr = <0x0>;
@@ -157,7 +159,7 @@
 	axi4lite_0: axi@0 {
 		#address-cells = <1>;
 		#size-cells = <1>;
-		compatible = "xlnx,axi-interconnect-1.02.a", "simple-bus";
+		compatible = "xlnx,axi-interconnect-1.03.a", "simple-bus";
 		ranges ;
 		axi_ether_0: ethernet@88f00000 {
 			compatible = "xlnx,axi-ethernetlite-1.00.a", "xlnx,xps-ethernetlite-1.00.a";
@@ -280,7 +282,7 @@
 			compatible = "xlnx,axi-intc-1.01.a", "xlnx,xps-intc-1.00.a";
 			interrupt-controller ;
 			reg = < 0x8aff0000 0x10000 >;
-			xlnx,kind-of-intr = <0x19>;
+			xlnx,kind-of-intr = <0x18>;
 			xlnx,num-intr-inputs = <0x6>;
 		} ;
 		axi_sysace_0: sysace@83600000 {
@@ -294,9 +296,9 @@
 		} ;
 		axi_timer_0: system-timer@8aef0000 {
 			clock-frequency = <50000000>;
-			compatible = "xlnx,axi-timer-1.01.a", "xlnx,xps-timer-1.00.a";
+			compatible = "xlnx,axi-timer-1.02.a", "xlnx,xps-timer-1.00.a";
 			interrupt-parent = <&axi_intc_0>;
-			interrupts = < 0 0 >;
+			interrupts = < 0 2 >;
 			reg = < 0x8aef0000 0x10000 >;
 			xlnx,count-width = <0x20>;
 			xlnx,family = "virtex6";
@@ -308,7 +310,7 @@
 		} ;
 		axi_uart_0: serial@89ff0000 {
 			clock-frequency = <50000000>;
-			compatible = "xlnx,axi-uartlite-1.01.a", "xlnx,xps-uartlite-1.00.a";
+			compatible = "xlnx,axi-uartlite-1.02.a", "xlnx,xps-uartlite-1.00.a";
 			current-speed = <115200>;
 			device_type = "serial";
 			interrupt-parent = <&axi_intc_0>;
