@@ -22,7 +22,7 @@
  *
  * CAUTION:  This file is automatically generated by libgen.
  * Version:  Xilinx EDK 13.2 EDK_O.61xd
- * Today is: Tuesday, the 14 of February, 2012; 22:15:28
+ * Today is: Saturday, the 18 of February, 2012; 13:12:49
  *
  * Description: U-Boot Configurations
  *
