@@ -1,3 +1,7 @@
+2012-02-18	Stephan Linz <linz@li-pro.net>
+
+	* xlbsp: upgrade to lates exports from ISE 13.2
+
 2012-02-14	Stephan Linz <linz@li-pro.net>
 
 	* common: initial version Xilinx-ML605-AXI-lite-13.2
